// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componenete con el nombre del producto 1`] = `
<div
  className="undefined  productCard "
>
  <span
    className="undefined  productDescription"
  >
    Coffe Mug - Card
  </span>
</div>
`;

exports[`ProductTitle debe de mostrarse econ el titulo personalizado 1`] = `
<span
  className="undefined  productDescription"
>
  Hola wawa
</span>
`;
